--- a/recommender/static/src/dashboard.css
+++ b/recommender/static/src/dashboard.css
@@ -86,12 +86,42 @@ section.top-banner {
     position: relative;
 }
 
+#course-types {
+    padding-top: 50px;
+
+}
+
+#top-rated {
+}
+
+.line-clamp-2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+#type {
+    margin: 20px;
+    font-size: 22px;
+    color: white;
+    background: rgb(138, 89, 228);
+    background: linear-gradient(90deg, rgba(138, 89, 228, 1) 0%, rgba(112, 46, 233, 1) 36%, rgba(127, 0, 255, 1) 100%);
+    border-radius: 8px;
+    padding: 10px;
+
+}
+
 input[type="search"] {
     border-radius: 1rem;
     border: #5521b5;
     background-color: white;
 }
 
+#contact{
+    margin-top: 8rem;
+    padding: 2rem;
+}
 /* Buttons */
 .btn1, .read-more, .custom-button, .update-profile-btn {
     background-color: #5521b5;
@@ -146,8 +176,30 @@ input[type="search"] {
         left: 0%;
         bottom: 5rem;
     }
+
     .heading-div {
         right: 0;
         top: 0;
     }
+}
+
+@keyframes scroll {
+    0% {
+        transform: translateX(0%);
+    }
+    100% {
+        transform: translateX(-50%);
+    }
+}
+
+.animate-scroll {
+    animation: scroll 20s linear infinite;
+}
+
+.font-poppins {
+    font-family: 'Poppins', sans-serif;
+}
+
+.text-uppercase {
+    text-transform: uppercase;
 }
