--- a/recommender/users/templates/signin.html
+++ b/recommender/users/templates/signin.html
@@ -9,101 +9,78 @@
 
     <script src="https://accounts.google.com/gsi/client" async defer></script>
 
-{#   <script>#}
-{#    function handleCredentialResponse(response) {#}
-{#        // Decode the Google token to get the user's info#}
-{#        const userObject = jwt_decode(response.credential);  // Decode JWT token#}
-{#        console.log(userObject);#}
-{##}
-{#        // Send this response to your backend to register or login the user#}
-{#        fetch('/google-login/', {#}
-{#            method: 'POST',#}
-{#            headers: {#}
-{#                'Content-Type': 'application/json',#}
-{#            },#}
-{#            body: JSON.stringify({#}
-{#                credential: response.credential#}
-{#            })#}
-{#        }).then(res => res.json())#}
-{#          .then(data => {#}
-{#              console.log('User Logged In:', data);#}
-{#              // Redirect user or display login success#}
-{#              window.location.href = "/home/";  // Redirect after login (adjust accordingly)#}
-{#          })#}
-{#          .catch(err => console.error('Error:', err));#}
-{#    }#}
-{#</script>#}
-
-
-    <br><br>
-    {% if messages %}
-        {% for message in messages %}
-            <p class="error text-red-500">{{ message }}</p>
-        {% endfor %}
-    {% endif %}
-
-    <form method="POST" action="/signin/" class="max-w-sm mx-auto bg-white p-6 shadow-md rounded-lg border"
-          style="background-color: white; margin-top: 60px">
-        {% csrf_token %}
-        <div class="mb-5">
-            <label for="email" class="block mb-2 text-sm font-medium text-gray-900">Your email</label>
-            <input type="email" name="email" id="email"
-                   class="bg-white border border-gray-300 text-gray-900 text-sm rounded-lg
-                  focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" required/>
-        </div>
-        <div class="mb-5">
-            <label for="password" class="block mb-2 text-sm font-medium text-gray-900">Your password</label>
-            <input type="password" name="password" id="password"
-                   class="bg-white border border-gray-300 text-gray-900 text-sm rounded-lg
-                  focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                   required/>
-        </div>
-        <div class="flex items-start mb-5">
-            <div class="flex items-center h-5">
-                <input id="remember" type="checkbox" value=""
-                       class="w-4 h-4 border border-gray-300 rounded-sm bg-white focus:ring-3 focus:ring-blue-300"
-                       required/>
-            </div>
-            <label for="remember" class="ms-2 text-sm font-medium text-gray-900">Remember me</label>
-        </div>
-        <button type="submit" class="custom-button" style="background-color: #5521b5">Signin</button>&nbsp;
-
-        <!-- Google Sign-In Button -->
-        <div id="g_id_onload"
-             data-client_id="1051342845649-8qlcc0h41kq2sf3dakaogfdgv2omks4p.apps.googleusercontent.com"
-             data-callback="handleCredentialResponse"
-             data-auto_prompt="false">
-        </div>
-        <div class="g_id_signin" data-type="standard"></div>
-
-
-    </form>
-
-
     <script>
-    function handleCredentialResponse(response) {
-        const data = response.credential; // Contains the JWT
-        const userData = {
-            token: data
-        };
+        function handleCredentialResponse(response) {
+            const data = response.credential;
+            const userData = {
+                token: data
+            };
 
-        fetch('google_auth_callback', {
-            method: 'POST',
-            body: JSON.stringify(userData),
-            headers: {
-                'Content-Type': 'application/json'
-            }
-        })
-        .then(response => response.json())
-        .then(data => {
-            if (data.success) {
-                window.location.href = '/dashboard:dashboard';  // Redirect to your dashboard or profile page
-            } else {
-                alert("Authentication failed.");
-            }
-        });
-    }
-</script>
+            fetch('google_auth_callback', {
+                method: 'POST',
+                body: JSON.stringify(userData),
+                headers: {
+                    'Content-Type': 'application/json'
+                }
+            })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.success) {
+                        window.location.href = '/dashboard:dashboard';
+                    } else {
+                        alert("Authentication failed.");
+                    }
+                });
+        }
+    </script>
+
+    <div class="min-h-screen flex items-center justify-center bg-gray-100" id="auth">
+        <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-sm">
+
+            <form method="POST" action="/signin/" class="max-w-sm mx-auto bg-white p-6 shadow-md rounded-lg border"
+                  style="background-color: white;">
+                {% csrf_token %}
+                <div class="mb-5">
+                    <label for="email" class="block mb-2 text-sm font-medium text-gray-900">Your email</label>
+                    <input type="email" name="email" id="email"
+                           class="bg-white border border-gray-300 text-gray-900 text-sm rounded-lg
+                  focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" required/>
+                </div>
+                <div class="mb-5">
+                    <label for="password" class="block mb-2 text-sm font-medium text-gray-900">Your password</label>
+                    <input type="password" name="password" id="password"
+                           class="bg-white border border-gray-300 text-gray-900 text-sm rounded-lg
+                  focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                           required/>
+                </div>
+                <div class="flex items-start mb-5">
+                    <div class="flex items-center h-5">
+                        <input id="remember" type="checkbox" value=""
+                               class="w-4 h-4 border border-gray-300 rounded-sm bg-white focus:ring-3 focus:ring-blue-300"
+                               required/>
+                    </div>
+                    <label for="remember" class="ms-2 text-sm font-medium text-gray-900">Remember me</label>
+                </div>
+                <button type="submit" class="custom-button" style="background-color: #5521b5">Signin</button>&nbsp;
+
+                <!-- Google Sign-In Button -->
+                <div id="g_id_onload"
+                     data-client_id="1051342845649-8qlcc0h41kq2sf3dakaogfdgv2omks4p.apps.googleusercontent.com"
+                     data-callback="handleCredentialResponse"
+                     data-auto_prompt="false">
+                </div>
+                <div class="g_id_signin" data-type="standard"></div>
+
+
+            </form>
+
+
+        </div>
+    </div>
+
+
+
+
 
 
 
