--- a/recommender/users/templates/signup.html
+++ b/recommender/users/templates/signup.html
@@ -3,57 +3,59 @@
 {% block content %}
     {% load static %}
 
-{% block css_cdn %}
-    <link rel="stylesheet" href="{% static 'css/../../static/src/register.css' %}">
-{% endblock css_cdn %}
+    {% block css_cdn %}
+        <link rel="stylesheet" href="{% static '/src/register.css' %}">
+    {% endblock css_cdn %}
+
+    <div class="min-h-screen flex items-center justify-center bg-gray-100" id="auth">
+        <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-sm">
+
+            <form method="POST" action="/signup/" class="max-w-sm mx-auto bg-white p-6 shadow-md rounded-lg border">
+                {% csrf_token %}
+                <div class="mb-5">
+                    <label for="name" class="block mb-2 text-sm font-medium text-gray-900">Username</label>
+                    <input type="text" name="name" id="name"
+                           class="shadow-sm bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                           required/>
+                </div>
+                <div class="mb-5">
+                    <label for="email" class="block mb-2 text-sm font-medium text-gray-900">Your email</label>
+                    <input type="email" name="email" id="email"
+                           class="shadow-sm bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                           required/>
+                </div>
+                <div class="mb-5">
+                    <label for="password" class="block mb-2 text-sm font-medium text-gray-900">Your password</label>
+                    <input type="password" name="password" id="password"
+                           class="shadow-sm bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                           required/>
+                </div>
+                <div class="mb-5">
+                    <label for="repeat-password" class="block mb-2 text-sm font-medium text-gray-900">Repeat
+                        password</label>
+                    <input type="password" id="repeat-password"
+                           class="shadow-sm bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                           required/>
+                </div>
+                <div class="flex items-start mb-5">
+                    <div class="flex items-center h-5">
+                        <input id="terms" type="checkbox" value=""
+                               class="w-4 h-4 border border-gray-300 rounded-sm bg-white focus:ring-3 focus:ring-blue-300"
+                               required/>
+                    </div>
+                    <label for="terms" class="ms-2 text-sm font-medium text-gray-900">I agree with the <a href="#"
+                                                                                                          class="text-blue-600 hover:underline">terms
+                        and conditions</a></label>
+                </div>
+                <button type="submit" class="custom-button" style="background-color: #5521b5">Signup</button>
+
+            </form>
 
 
-    <br>
-    {% if messages %}
-        {% for message in messages %}
-            <p class="error text-red-500">{{ message }}</p>
-        {% endfor %}
-    {% endif %}
+        </div>
+    </div>
 
-    <form method="POST" action="/signup/" class="max-w-sm mx-auto bg-white p-6 shadow-md rounded-lg border" style="margin-top: 60px">
-        {% csrf_token %}
-        <div class="mb-5">
-            <label for="name" class="block mb-2 text-sm font-medium text-gray-900">Username</label>
-            <input type="text" name="name" id="name"
-                   class="shadow-sm bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                   required/>
-        </div>
-        <div class="mb-5">
-            <label for="email" class="block mb-2 text-sm font-medium text-gray-900">Your email</label>
-            <input type="email" name="email" id="email"
-                   class="shadow-sm bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                   required/>
-        </div>
-        <div class="mb-5">
-            <label for="password" class="block mb-2 text-sm font-medium text-gray-900">Your password</label>
-            <input type="password" name="password" id="password"
-                   class="shadow-sm bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                   required/>
-        </div>
-        <div class="mb-5">
-            <label for="repeat-password" class="block mb-2 text-sm font-medium text-gray-900">Repeat password</label>
-            <input type="password" id="repeat-password"
-                   class="shadow-sm bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                   required/>
-        </div>
-        <div class="flex items-start mb-5">
-            <div class="flex items-center h-5">
-                <input id="terms" type="checkbox" value=""
-                       class="w-4 h-4 border border-gray-300 rounded-sm bg-white focus:ring-3 focus:ring-blue-300"
-                       required/>
-            </div>
-            <label for="terms" class="ms-2 text-sm font-medium text-gray-900">I agree with the <a href="#"
-                                                                                                  class="text-blue-600 hover:underline">terms
-                and conditions</a></label>
-        </div>
-    <button type="submit" class="custom-button" style="background-color: #5521b5" >Signup</button>
 
-    </form>
 
 
 
