--- a/recommender/templates/footer.html
+++ b/recommender/templates/footer.html
@@ -11,9 +11,9 @@
         <div class="text-center">
             <a href="#"
                class="flex items-center justify-center mb-5 text-2xl font-semibold text-gray-900">
-                PathFinder AI
+                PathFinder
             </a>
-            <span class="block text-sm text-center text-gray-500">© 2025 PathFinder AI</a>.
+            <span class="block text-sm text-center text-gray-500">© 2025 PathFinder</a>.
                 </span>
             <ul class="flex justify-center mt-5 space-x-5">
                 <li>
