--- a/recommender/users/templates/signin.html
+++ b/recommender/users/templates/signin.html
@@ -89,7 +89,7 @@
                     <div class="flex justify-end">
                         <button id="close-modal"
                                 class="bg-purple-600 hover:bg-purple-700 text-white px-4 py-2 rounded-lg">
-                            try again
+                            Close
                         </button>
                     </div>
                 </div>
