--- a/recommender/templates/base.html
+++ b/recommender/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Dashboard</title>
+    <title>PathFinder</title>
 
     <meta name="title" content="PathFinder AI">
     <meta name="language" content="English">
@@ -55,7 +55,7 @@
         <div class="flex flex-wrap items-center justify-between max-w-screen-xl px-4 mx-auto">
             <a href="#" class="flex items-center">
                 <span class="self-center text-xl font-semibold whitespace-nowrap"
-                      style="color: black; font-size:25px; font-family: 'Inter', sans-serif;">PathFinder AI</span>
+                      style="color: black; font-size:25px; font-family: 'Inter', sans-serif;">PathFinder</span>
             </a>
 
             <div class="flex items-center lg:order-2" style="margin: 10px">
@@ -163,7 +163,7 @@
 </header>
 
 
-<main class="">
+<main class="bg-white">
     {% block content %}
 
 
